--- a/JavaApp/nbproject/project.properties
+++ b/JavaApp/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=javaapp.JavaApp
+main.class=br.edu.ifro.app.Start
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
